# Vk_Build

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  Vulkan  claude  cmake_install.cmake  ideer.txt  run.sh  todo.txt
Libraries/glfw/examples/: simple
Libraries/stb/: stb_image.h
res/models/: viking_room2.mtl
res/pics/: grass.kra  house.png-autosave.kra  house.png~
res/shaders/: compile.bat  grass.frag  grass.vert  house.frag  house.vert  selectionbox.frag  selectionbox.vert  selectionbox_vert.spv  triangle.frag  triangle.vert  triangle_frag.spv  triangle_vert.spv  vill.frag  vill.vert
src/: camera.cpp  camera.h  file_util.cpp  file_util.h  file_watcher.cpp  file_watcher.h  main.cpp  path_finding.cpp  path_finding.h  paths.cpp  paths.h  random_util.cpp  random_util.h  scene_data.cpp  scene_data.h  scene_handler.cpp  scene_handler.h  timer_util.cpp  timer_util.h  window.cpp  window.h
src/game/: Femaleness.cpp  Femaleness.h  Maleness.cpp  Maleness.h  Map.cpp  Map.h  Vill.cpp  Vill.h  Villager.cpp  Villager.h  Villagers.cpp  Villagers.h
src/gra/: Entity.cpp  Entity.h  Mesh.cpp  Mesh.h  Mesh2D.cpp  Mesh2D.h  Model.cpp  Model.h
src/gra_elems/: Mesh2D.h  Model.cpp  Model.h  RenderEntity.cpp  RenderEntity.h  SelectionBox.cpp  SelectionBox.h  ShaderName.h  Vertex.cpp  Vertex.h
src/math/: Vec2.cpp  Vec2.h  Vec3.cpp  Vec3.h  hash.h  mat.cpp  mat.h  math_stuff.cpp  math_stuff.h  vec2.cpp  vec2.h  vec3.cpp  vec3.h
src/models/: Building.cpp  Building.h  Component.cpp  Component.h  Map.cpp  Map.h  SelectionBoxModel.cpp  SelectionBoxModel.h  Villager.cpp  Villager.h
src/network/: RemoteLan.cpp  RemoteLan.h
src/player/: VillagerStats.cpp  VillagerStats.h
src/rendering/: Entity.cpp  Entity.h  Mesh2D.cpp  Mesh2D.h  Model.cpp  Model.h  ShaderSetup.cpp  ShaderSetup.h  Vertex.h
src/scene/: scene_data.cpp  scene_data.h  scene_handler.cpp  scene_handler.h
src/shaders/: Map.cpp  SelectionBoxModel.cpp  SelectionBoxModel.h  Shaders.cpp  Shaders.h  Villager.cpp  Villager.h
src/test/: test_selection.cpp  test_selection.h
src/vk/: gra_descriptors.cpp  gra_descriptors.h  gra_presentation.cpp  gra_presentation.h  gra_setup.cpp  gra_setup.h
(+71 files in other folders)
